fleshed out the javascript DOM manipulation and functionality. A few bugs to work out and some styling to make it more useable and asthetic

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -23,6 +23,10 @@ textarea{
   border-bottom: 10px solid black;
 }
 
+.form-control{
+  outline: none;
+}
+
 .description{
   white-space: pre-wrap;
 }
